<resources>
    <string name="app_name">Инвентаризация</string>
    <string name="btn_speak">Голос</string>
    <string name="btn_search">Найти</string>
    <string name="voice_hint">Назовите номер (можно не весь)</string>
    <string name="title_activity_login">Регистрация</string>
    <string name="prompt_username">Логин</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Войти</string>

    <string name="dialog_new_item_title">Добавление предмета из базы в кабинет</string>
    <string name="dialog_new_item_hint">Инвентарник</string>

    <string name="add">Добавить</string>
    <string name="cancel">Отмена</string>
    <string name="items">Предметы</string>
    <string name="stocktaking">Инвентаризация</string>
    <string name="qr_camera">QR-камера</string>
    <string name="save">Сохранить</string>

    <string name="name">Наименование</string>
    <string name="location">Кабинет</string>
    <string name="type">Тип</string>
    <string name="is_working">Работает</string>
    <string name="history">"История: "</string>
    <string name="purchase_date">"Дата приобритения: "</string>

    <string name="hint_item_already_in_list">Такой предмет уже был в списке</string>

    <string name="error_connect_to_db">Ошибка подключения к базе</string>
    <string name="error_no_item_in_db">Такого предмета нет в базе</string>
    <string name="error_empty_input">Пустое поле ввода</string>
    <string name="error_login">Неверный логин или пароль</string>
</resources>
