<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="ru.gosarhro.stocktaking.activity.ItemActivity">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="2dp"
        android:src="@drawable/ic_item_another_color"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/image_view"
        android:text="Temp id"
        android:textColor="@android:color/black"
        android:textSize="37sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/image_view"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameTextField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/name"
        app:layout_constraintTop_toBottomOf="@+id/id">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/activity_item_et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/locationTextField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/location"
        app:layout_constraintTop_toBottomOf="@+id/nameTextField">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/activity_item_et_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/typeDropdown"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/type"
        app:layout_constraintTop_toBottomOf="@+id/locationTextField">

        <AutoCompleteTextView
            android:id="@+id/activity_item_dropdown_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <CheckBox
        android:id="@+id/activity_item_cb_working"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/is_working"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/typeDropdown" />


    <TextView
        android:id="@+id/purchase_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/purchase_date"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/activity_item_cb_working" />

    <TextView
        android:id="@+id/history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/history"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/purchase_date" />


    <Button
        android:id="@+id/activity_item_btn_save"
        style="?attr/materialButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        android:text="@string/save"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>